--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- viewport settings -->
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-  <title>Data Collector for AGOL</title>
+  <title>PetFinderPro</title>
 
   <style>
     html,
