--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       esriConfig.apiKey = "AAPK0bcf3be97f2f477b847094cc3f93a15bFUqgC48X1eCFBejkZZxhltF6wYGP8yCnJLEWyFcqBmpG88NVXD_PgTB-NFvT_xUG";
 
       const map = new Map({
-        basemap: "satellite"
+        basemap: "streets-navigation-vector"
       });
 
       const view = new MapView({
