--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
       background-color: #005a87;
     }
 
+    #about {
+      position: absolute;
+      z-index: 10;
+      top: 50px;
+      right: 10px;
+      background-color: #0079c1;
+      color: white;
+      padding: 8px 16px;
+      border: none;
+      border-radius: 4px;
+      font-size: 14px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+
     .legend-icon {
       width: 15px;  /* Adjust as needed */
       height: 15px; /* Adjust as needed */
@@ -222,7 +237,12 @@ view.ui.add(legendDiv, 'bottom-right');
 
 <body>
 
+  <!-- Add a button to report a lost or found pet -->
+
+
   <a href="https://arcg.is/0rP5ja1" target="_blank" class="addRecordBtn">Report Lost or Found Pet</a>
+
+  <a href="about.html" id="about">About</a>
 
   <div id="viewDiv"></div>
   
