Editting about and map zoom

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
       const view = new MapView({
         container: "viewDiv", // Reference to the DOM node that will contain the view
         map: map, // References the map object
-        center: [-80.781784, 26.982052], // Longitude, latitude, Lake Okeechobee
-        zoom: 8 // Zoom level
+        center: [-80.20548, 26.10211], // Longitude, latitude
+        zoom: 10 // Zoom level
       });
 
       const locateBtn = new Locate({
