--- a/about.html
+++ b/about.html
@@ -7,10 +7,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div class="max-w-5xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
+    <div class="max-w-5xl mx-auto py-12 px-4 sm:px-6 lg:px-8 text-justify">
         <h1 class="text-2xl font-semibold">About PetFinderPro</h1>
-        <p class="text-normal mt-3">PetFinderPro is a web application that allows users to report lost and found pets in their neighborhoods.</p>
-        <p class="text-base">In the future we will implement a feature to search/post pets available for adoption by individuals in their area. 
+        <p class="text-normal mt-3">PetFinderPro is a web application that allows users to report lost and found pets in their neighborhoods. It also has a growing database of veterinarian clinics and their contact info so people can call to verify if their pet has been brought in.</p>
+
+        <p class="text-base mt-3">In the future we will implement a feature to search/post pets available for adoption by individuals in their area. 
         <br> Users can view detailed information about each pet, including photos, descriptions, and contact information.</p>
         <p class="text-base">Our mission is to help people and pets reunite and find loving forever homes.</p>
         <p class="text-base mt-3">Thank you for using PetFinderPro!</p>
