--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>PetFinderPro</title>
 
   <style>
+    /* Set the height and width of the HTML, body, and viewDiv to fill the screen */
     html,
     body,
     #viewDiv {
@@ -19,6 +20,7 @@
       width: 100%;
     }
 
+    /* Style for the add record button */
     .addRecordBtn {
       position: absolute;
       z-index: 10;
@@ -34,10 +36,12 @@
       text-decoration: none;
     }
 
+    /* Style for the add record button when hovered */
     .addRecordBtn:hover {
       background-color: #005a87;
     }
 
+    /* Style for the about button */
     #about {
       position: absolute;
       z-index: 10;
@@ -53,11 +57,13 @@
       text-decoration: none;
     }
 
+    /* Style for the legend icon */
     .legend-icon {
       width: 15px;  /* Adjust as needed */
       height: 15px; /* Adjust as needed */
     }
 
+    /* Style for the legend */
     .legend {
       position: absolute;
       top: -50px;    /* Adjust as needed */
@@ -91,12 +97,15 @@
   "esri/symbols/PictureMarkerSymbol"
 ], (esriConfig, Map, MapView, Locate, Search, FeatureLayer, Legend, Graphic, Point, GraphicsLayer, PopupTemplate, PictureMarkerSymbol) => {
 
+      // Set the API key
       esriConfig.apiKey = "AAPK0bcf3be97f2f477b847094cc3f93a15bFUqgC48X1eCFBejkZZxhltF6wYGP8yCnJLEWyFcqBmpG88NVXD_PgTB-NFvT_xUG";
 
+      // Create a new map with the streets-navigation-vector basemap
       const map = new Map({
         basemap: "streets-navigation-vector"
       });
 
+      // Create a new MapView
       const view = new MapView({
         container: "viewDiv", // Reference to the DOM node that will contain the view
         map: map, // References the map object
@@ -104,6 +113,7 @@
         zoom: 10 // Zoom level
       });
 
+      // Create a new Locate button
       const locateBtn = new Locate({
         view: view
       });
@@ -113,6 +123,7 @@
         position: "top-left"
       });
 
+      // Create a new Search widget
       const searchWidget = new Search({
         view: view
       });
@@ -129,6 +140,7 @@
         view: view
       });
 
+      // Add the legend to the bottom right corner of the view
       view.ui.add(legend, "bottom-right");
 
       // Create featurelayer from feature service 
@@ -159,78 +171,83 @@
         }
       });
 
+      // Add the layer to the map
       map.add(layer);
 
-      var graphicsLayer = new GraphicsLayer();
-  map.add(graphicsLayer);
+      // Create a new GraphicsLayer to hold the Veterinarian Clinic locations
+      const graphicsLayer = new GraphicsLayer();    
+      // Add the GraphicsLayer to the map
+      map.add(graphicsLayer);
 
-  fetch('./merged_data.json')
-    .then(response => response.json())
-    .then(data => {
-      data.results.forEach(place => {
-        var point = new Point({
-          longitude: place.geometry.location.lng,
-          latitude: place.geometry.location.lat
-        });
+      // Fetch the data from the merged_data.json file
+      fetch('./merged_data.json')
+        .then(response => response.json())
+        .then(data => {
+          // For each place in the data, create a new Graphic and add it to the GraphicsLayer
+          data.results.forEach(place => {
+            var point = new Point({
+              longitude: place.geometry.location.lng,
+              latitude: place.geometry.location.lat
+            });
 
-        var markerSymbol = new PictureMarkerSymbol({
-          url: "veterinarian.png",
-          width: "48px",
-          height: "48px"
-        });
+            var markerSymbol = new PictureMarkerSymbol({
+              url: "veterinarian.png",
+              width: "48px",
+              height: "48px"
+            });
 
-        var popupTemplate = new PopupTemplate({
-          title: "{name}",
-          content: [
-            {
-              type: "fields",
-              fieldInfos: [
+            var popupTemplate = new PopupTemplate({
+              title: "{name}",
+              content: [
                 {
-                  fieldName: "name",
-                  label: "Clinic Name"
-                },
-                {
-                  fieldName: "formatted_address",
-                  label: "Address"
-                },
-                {
-                  fieldName: "rating",
-                  label: "Rating"
+                  type: "fields",
+                  fieldInfos: [
+                    {
+                      fieldName: "name",
+                      label: "Clinic Name"
+                    },
+                    {
+                      fieldName: "formatted_address",
+                      label: "Address"
+                    },
+                    {
+                      fieldName: "rating",
+                      label: "Rating"
+                    }
+                  ]
                 }
               ]
-            }
-          ]
-        });
+            });
 
-        var graphic = new Graphic({
-          geometry: point,
-          symbol: markerSymbol,
-          attributes: place,
-          popupTemplate: popupTemplate
-        });
+            var graphic = new Graphic({
+              geometry: point,
+              symbol: markerSymbol,
+              attributes: place,
+              popupTemplate: popupTemplate
+            });
 
-        graphicsLayer.add(graphic);
-      });
+            // Add the Graphic to the GraphicsLayer
+            graphicsLayer.add(graphic);
+          });
 
-      // Create a new div for the legend
-    var legendDiv = document.createElement('div');
-    legendDiv.className = 'legend';
+          // Create a new div for the legend
+          var legendDiv = document.createElement('div');
+          legendDiv.className = 'legend';
 
-// Create a new entry for the graphics layer
-var graphicsLayerEntry = document.createElement('div');
-    graphicsLayerEntry.innerHTML = '<img class="legend-icon" src="veterinarian.png"> Veterinarian Clinics';
+          // Create a new entry for the graphics layer
+          var graphicsLayerEntry = document.createElement('div');
+          graphicsLayerEntry.innerHTML = '<img class="legend-icon" src="veterinarian.png"> Veterinarian Clinics';
 
-// Add the entry to the legend
-legendDiv.appendChild(graphicsLayerEntry);
+          // Add the entry to the legend
+          legendDiv.appendChild(graphicsLayerEntry);
 
-// Add the legend to the view
-view.ui.add(legendDiv, 'bottom-right');
-});
-
+          // Add the legend to the view
+          view.ui.add(legendDiv, 'bottom-right');
+        })
+      .catch(error => console.error('Error:', error)); // This is where the .catch block goes   
 
     });
 
-      
   </script>
 
 </head>
@@ -238,14 +255,13 @@ view.ui.add(legendDiv, 'bottom-right');
 <body>
 
   <!-- Add a button to report a lost or found pet -->
-
-
   <a href="https://arcg.is/0rP5ja1" target="_blank" class="addRecordBtn">Report Lost or Found Pet</a>
 
+  <!-- Add a button to show the about page -->
   <a href="about.html" id="about">About</a>
 
+  <!-- Add a div to contain the MapView -->
   <div id="viewDiv"></div>
-  
 
 </body>
 
